--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,6 @@
 
 body {
   margin: 0 autp;
-  background-image: url("https://tinyurl.com/ydeg23el");
   text-align: center;
   color: #fff;
 }
@@ -28,6 +27,16 @@ li {
   width: 150px;
   color: #fff;
   font-size: 15px;
+}
+
+.content {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  background-image: url(https://tinyurl.com/ydeg23el);
+  top: 0;
+  left: 0;
+  z-index: -1;
 }
 
 /*# sourceMappingURL=style.css.map */
